@@ -1,4 +1,4 @@
-useDynLib("rebmix")
+useDynLib(rebmix, .registration = TRUE, .fixes = "C_")
 
 import("methods", "stats", "utils", "graphics", "grDevices", "mvtnorm")
 
